# pdf2epub

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: build_macos.sh  build_windows.ps1
src/pdf2epub/: __init__.py  __main__.py  cli.py  config.py  gui.py
src/pdf2epub/core/: __init__.py  builder.py  parser.py
