[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2epub"
version = "0.2.0"
description = "Convert PDF documents to EPUB format with layout and image preservation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "canglang007" },
]

dependencies = [
  "PyMuPDF>=1.24.0",
  "ebooklib>=0.18",
  "click>=8.0",
  "customtkinter>=5.2.0",
  "Pillow>=10.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.scripts]
pdf2epub = "pdf2epub.cli:main"

[project.gui-scripts]
pdf2epub-gui = "pdf2epub.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2epub"]

[tool.hatch.build.targets.pyinstaller]
# used for packaging into standalone executable
